--- a/templates/docker_server.html
+++ b/templates/docker_server.html
@@ -51,7 +51,7 @@
                 </span>
         </td>
         <td>{{container.name}}</td>
-        <td>{{server.host}}</td>
+        <td>{{server.ip}}</td>
         <td>{{container.attrs.Config.ExposedPorts}}</td>
         <td>
             <button class="btn btn-primary btn-xs"
