--- a/templates/docker_server.html
+++ b/templates/docker_server.html
@@ -3,7 +3,7 @@
 <ul class="nav nav-pills">
     <li role="presentation" class="active"><a href="/docker_server/">Docker Server</a></li>
     <li role="presentation"><a href="/supervisor_server/">Supervisor Server</a></li>
-    <li role="presentation"><a href="/logdir_viewer/">Logdir Viewer</a></li>
+    <li role="presentation"><a href="/dir_viewer/">Dir Viewer</a></li>
 </ul>
 {% endblock %}
 {% block body %}
