--- a/templates/text_viewer.html
+++ b/templates/text_viewer.html
@@ -2,8 +2,8 @@
 
 {% block body %}
 
-{% for log in log %}
-	{{ log }}<br/>      
+{% for text_content in text_contents %}
+	{{ text_content }}<br/>      
 {% endfor %}
 
 {% endblock %}
