--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <script src="{% static 'js/app.js' %}"></script>
 </head>
 <body>
-<div class="row">
+<div class="row"style="margin-left: 0px; margin-right: 0px">
     <div class="col-md-12">
         <nav class="navbar navbar-default"><!-- /navbar -->
               <div class="container-fluid">
