--- a/templates/dir_viewer.html
+++ b/templates/dir_viewer.html
@@ -10,7 +10,7 @@
 {% block body %}
 <div class="page-header">
     <h1>
-        <small>controlled by supervisor</small>
+        <small>controlled by django</small>
     </h1>
 </div>
 <div class="row">
