--- a/templates/docker_server.html
+++ b/templates/docker_server.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 {% block topbar %}
-<li class="active"><a href="/docker_server/">Docker Server</a></li>
-<li ><a href="/supervisor_server/">Supervisor Server</a></li>
-<li ><a href="/dir_viewer/">Dir Viewer</a></li>
-<li ><a href="/actions_log/">Actions Log</a></li>
+<li class="active"><a href="/dockerserver/">Docker Server</a></li>
+<li ><a href="/supervisorserver/">Supervisor Server</a></li>
+<li ><a href="/dirviewer/">Dir Viewer</a></li>
+<li ><a href="/actionslog/">Actions Log</a></li>
 {% endblock %}
 
 {% block body %}
