--- a/templates/actions_log.html
+++ b/templates/actions_log.html
@@ -59,7 +59,7 @@
         </span>
     </li>
     <li>{% if actions_log.has_next %}
-            <a style="color:gray href="?page={{ actions_log.next_page_number }}">Next</a>
+            <a href="?page={{ actions_log.next_page_number }}">Next</a>
         {% endif %}
     </li>
   </ul>
