--- a/templates/actions_log.html
+++ b/templates/actions_log.html
@@ -3,6 +3,7 @@
 {% block topbar %}
 <li ><a href="/dockerserver/">Docker Server</a></li>
 <li ><a href="/supervisorserver/">Supervisor Server</a></li>
+<li><a href="/jenkinsserver/">Jenkins Server</a></li>
 <li ><a href="/dirviewer/">Dir Viewer</a></li>
 <li class="active"><a href="/actionslog/">Actions Log</a></li>
 {% endblock %}
