--- a/templates/jenkins_server.html
+++ b/templates/jenkins_server.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
 {% block topbar %}
-<li class="active"><a href="/dockerserver/">Docker Server</a></li>
-<li ><a href="/supervisorserver/">Supervisor Server</a></li>
-<li><a href="/jenkinsserver/">Jenkins Server</a></li>
+<li ><a href="/dockerserver/">Docker Server</a></li>
+<li><a href="/supervisorserver/">Supervisor Server</a></li>
+<li class="active"><a href="/jenkinsserver/">Jenkins Server</a></li>
 <li ><a href="/dirviewer/">Dir Viewer</a></li>
 <li ><a href="/actionslog/">Actions Log</a></li>
 {% endblock %}
@@ -11,7 +11,7 @@
 {% block body %}
 <div class="page-header">
     <h1>
-        <small>controlled by docker</small>
+        <small>controlled by supervisor</small>
     </h1>
 </div>
 <div class="row">
@@ -31,6 +31,7 @@
 </div>
 
 {% for server in server_all_list %}
+
 <h3>Host: {{server.ip}}</h3>
 <table class="table">
     <tr class="active">
@@ -40,52 +41,43 @@
         <th width="30%">description</th>
         <th colspan="4" width="10%">operation</th>
     </tr>
-    {% for container in server.containers %}
+    {% for job in server.jobs %}
     <tr>
         <td style="text-transform:capitalize;">
-            {% if container.status == 'running' %}
+            {% if job.color == 'blue' %}
                 <span style="background-color: #E0E0E0">
-                 {% elif container.status == 'exited' %}
+                 {% elif job.color == 'red' %}
                 <span style="background-color: #C0C0C0">
                  {% else %}
                 <span>
                     {% endif %}
-                    {{container.status|lower}}
+                    {{job.color|lower}}
                 </span>
         </td>
-        <td>{{container.name}}</td>
+        <td>{{job.name}}</td>
         <td>{{server.ip}}</td>
-        <td>{{container.apistatus|lower}}</td>
+        <td>{{app.description|lower}}</td>
         <td>
             <button class="btn btn-default btn-xs"
-                    onclick="container_opt('{{server.ip}}', '{{server.port}}' , '{{container.id}}', 'start')">
+                    onclick="supervisor_app_opt('{{server.ip}}', '{{server.port}}' , '{{app.name}}', 'start')">
                 start
             </button>
         </td>
         <td>
             <button class="btn btn-default btn-xs"
-                server_ip={{server.host}} 
-                server_port={{server.port}} 
-                container_id={{container.id}}
-                    onclick="container_opt('{{server.ip}}', '{{server.port}}',  '{{container.id}}', 'restart')">
+                    onclick="supervisor_app_opt('{{server.ip}}', '{{server.port}}' , '{{app.name}}', 'restart')">
                 restart
             </button>
         </td>
         <td>
             <button class="btn btn-default btn-xs"
-                server_ip={{server.host}} 
-                server_port={{server.port}} 
-                container_id={{container.id}}
-                    onclick="container_opt('{{server.ip}}', '{{server.port}}',  '{{container.id}}', 'stop')">
+                    onclick="supervisor_app_opt('{{server.ip}}', '{{server.port}}' , '{{app.name}}', 'stop')">
                 stop
             </button>
         </td>
         <td>
             <button class="btn btn-default btn-xs"
-                server_ip={{server.host}} 
-                server_port={{server.port}} 
-                container_id={{container.id}}
-                    onclick="tail_container_log('{{server.ip}}', '{{server.port}}',  '{{container.id}}')">
+                    onclick="tail_supervisor_app_log('{{server.ip}}', '{{server.port}}',  '{{app.name}}')">
                 tail
             </button>
         </td>
