--- a/templates/jenkins_server.html
+++ b/templates/jenkins_server.html
@@ -59,26 +59,14 @@
         <td>{{app.description|lower}}</td>
         <td>
             <button class="btn btn-default btn-xs"
-                    onclick="supervisor_app_opt('{{server.ip}}', '{{server.port}}' , '{{app.name}}', 'start')">
-                start
+                    onclick="jenkins_job_opt('{{server.ip}}', '{{server.port}}' , '{{job.name}}', 'build')">
+                build
             </button>
         </td>
         <td>
             <button class="btn btn-default btn-xs"
-                    onclick="supervisor_app_opt('{{server.ip}}', '{{server.port}}' , '{{app.name}}', 'restart')">
-                restart
-            </button>
-        </td>
-        <td>
-            <button class="btn btn-default btn-xs"
-                    onclick="supervisor_app_opt('{{server.ip}}', '{{server.port}}' , '{{app.name}}', 'stop')">
-                stop
-            </button>
-        </td>
-        <td>
-            <button class="btn btn-default btn-xs"
-                    onclick="tail_supervisor_app_log('{{server.ip}}', '{{server.port}}',  '{{app.name}}')">
-                tail
+                    onclick="tail_supervisor_app_log('{{server.ip}}', '{{server.port}}',  '{{job.name}}')">
+                console output
             </button>
         </td>
 
