--- a/templates/dir_viewer.html
+++ b/templates/dir_viewer.html
@@ -14,24 +14,9 @@
         <small>controlled by django</small>
     </h1>
 </div>
-<div class="row">
-    <div class="col-md-4">
-        <ul class="nav nav-pills nav-stacked">
-            {% for server in servers %}
-            <li role="presentation" style="background-color: lemonchiffon  ">
- <!--              <a href="#" onclick="show_server_status('{{server.id}}')">
-                    {{server.host}}:{{server.port}} {{server.Id}}
- -->               </a>
-            </li>
-            {% endfor %}
-        </ul>
-    </div>
-    <div class="col-md-8" id="server_div">
-    </div>
-</div>
-
-
-<h3>{{current_dir}}</h3>
+<h2>
+    <small>{{current_dir}}</small>
+</h2>
 <table class="table">
     <tr class="active">
         <th width="40%">name</th>
@@ -97,5 +82,3 @@
 </table>
 
 {% endblock %}
-</body>
-</html>
