--- a/templates/docker_server.html
+++ b/templates/docker_server.html
@@ -14,24 +14,11 @@
         <small>controlled by docker</small>
     </h1>
 </div>
-<div class="row">
-    <div class="col-md-4">
-        <ul class="nav nav-pills nav-stacked">
-            {% for server in servers %}
-            <li role="presentation" style="background-color: lemonchiffon  ">
- <!--              <a href="#" onclick="show_server_status('{{server.id}}')">
-                    {{server.host}}:{{server.port}} {{server.Id}}
- -->               </a>
-            </li>
-            {% endfor %}
-        </ul>
-    </div>
-    <div class="col-md-8" id="server_div">
-    </div>
-</div>
 
 {% for server in server_all_list %}
-<h3>Host: {{server.ip}}</h3>
+<h2>
+    <small>Server: {{server.ip}} </small>
+</h2>
 <table class="table">
     <tr class="active">
         <th width="10%">status</th>
@@ -95,5 +82,3 @@
 </table>
 {% endfor %}
 {% endblock %}
-</body>
-</html>
