--- a/templates/tail.html
+++ b/templates/tail.html
@@ -2,13 +2,19 @@
 
 {% block body %}
 
-{% for log in log %}
+
 	{{ log }}<br/>      
-{% endfor %}
+
 
 {% endblock %}
 
 <!--
+
+
+{% for log in log %}
+	{{ log }}<br/>      
+{% endfor %}
+
 <script language="JavaScript">
 
 function myrefresh() {
