actinos_log.html

--- a/templates/actions_log.html
+++ b/templates/actions_log.html
@@ -19,9 +19,9 @@
 </h2>
 <table class="table">
     <tr class="active">
-        <th width="20%">log_time</th>
-        <th width="15%">log_user</thw>
-        <th width="65%">log_detail</th>
+        <th width="20%">time</th>
+        <th width="15%">user</thw>
+        <th width="65%">detail</th>
     </tr>
     {% for log in actions_log %}
     <tr>
