--- a/templates/base.html
+++ b/templates/base.html
@@ -35,9 +35,9 @@
                   <ul class="nav navbar-nav navbar-right">
                       {% if request.session.islogin %}
                           <li><a class="fa fa-user" href="#"> {{ request.session.username }}</a></li>
-                          <li><a class="fa fa-sign-out" href="/logout/"> Logout</a></li>
+                          <li><a class="fa fa-sign-out" href="/logout/"> Sign out</a></li>
                       {% else %}
-                          <li><a href="/login/">Login</a></li>
+                          <li><a href="/login/">Sign in</a></li>
                           <li><a href="/register/">Register</a></li>
                       {% endif %}
                   </ul>
