--- a/templates/login.html
+++ b/templates/login.html
@@ -23,7 +23,7 @@
   <div class="row myCenter">
     <div class="col-xs-6 col-md-4 col-center-block">
       <form class="form-signin">
-        <h2 class="form-signin-heading">Login to mmanager</h2>
+        <h2 class="form-signin-heading">Sign in to mmanager</h2>
         <label for="username" class="sr-only">username</label>
         </br>
         <p>Username</p>
@@ -38,7 +38,7 @@
             Remember me </label>
         </div>
         </br>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Login in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
         </br>
         {% if message %}
             <div class="alert alert-warning">{{ message }}</div>
