--- a/templates/dir_viewer.html
+++ b/templates/dir_viewer.html
@@ -29,7 +29,7 @@
     <tr>
         <td>
         <span class="fa fa-folder-o">
-            <a href="?dist={{current_dir}}{{dir_info.file_name}}"</a>
+            <a style="color:inherit;" href="?dist={{current_dir}}{{dir_info.file_name}}"</a>
             {{dir_info.file_name}}
         </span>
         </td>
@@ -54,7 +54,7 @@
     <tr>
         <td>
         <span class="fa fa-file-text-o">
-            <a href="/textviewer/?dist={{current_dir}}{{dir_info.file_name}}"</a>
+            <a a style="color:inherit;" href="/textviewer/?dist={{current_dir}}{{dir_info.file_name}}"</a>
         {{dir_info.file_name}}
         </span>
         </td>
